web.config: urlrewrite: support for two layer
Added support for two layer of urlrewrite where base folder and folder
inside it requires urlrewrite.

Signed-off-by: NKK <nkk@gmail.com>

--- a/Web.config
+++ b/Web.config
@@ -90,6 +90,11 @@
   <rewriter>
     <rewrite url="~/User/(.*)" to="~/User/__user.aspx?RequestedURL=$1" />
     <rewrite url="~/Jobs-Interviews/(.*)" to="~/Jobs-Interviews/__Jobs.aspx?RequestedURL=$1" />
+	<rewrite url="~/pre-engineering/AIEEE/([a-zA-Z0-9_-]+)\.(.+)" to="~/pre-engineering/AIEEE/$1.aspx"/>
+	<rewrite url="~/pre-engineering/AIEEE/([a-zA-Z0-9_-]+$)" to="~/pre-engineering/AIEEE/$1.aspx"/>
+	<rewrite url="~/pre-engineering/([a-zA-Z0-9_-]+)\.(.+)" to="~/pre-engineering/$1.aspx"/>
+	<rewrite url="~/pre-engineering/([a-zA-Z0-9_-]+$)" to="~/pre-engineering/$1.aspx"/>
+	  
   </rewriter>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
